--- a/http_wemo_server/config.ini
+++ b/http_wemo_server/config.ini
@@ -1,6 +1,6 @@
 [LOG FILES]
 log_file_path2 = c://python_files//logs//http_wemo_server
-log_file_path = /var/logs/http_wemo_server
+log_file_path = ~/logs/http_wemo_server
 
 
 [EXTRA LOG HANDLERS]
